# CUDA-smart-pointers

./: .gitignore  CMakeLists.txt  Makefile  Readme.md  cuda_scoped_ptr.hpp  cuda_shared_ptr.hpp
tests/: cuda_shared_ptr_unittest.cpp  main_unittest.cpp  test_object.h
